# GraduationalResearch

./: .gitignore  CMakeLists.txt
result/: 3.10.1_dddb_1.txt  3.10.1_dddb_5.txt  3.10.3_awgn_2.txt  3.10.4_dddb_1.txt  3.10.5_dddb_1.txt  3.11.4_dddb_2.txt  out.txt
result/1.3/: v1.31024d1_1.txt  v1.31024d1_2.txt  v1.31024d2_1.txt  v1.31024d2_2.txt  v1.31024d401.txt  v1.31024d4_1.txt  v1.31024d4_2.txt  v1.31024nec1.txt  v1.31024npb1.txt  v1.32048d201.txt  v1.32048d2_1.txt  v1.32048nec1.txt  v1.32048npb1.txt
result/2.0/2.0.3/: 2.0.3_awgn_1.txt  2.0.3_awgn_10.txt  2.0.3_awgn_2.txt  2.0.3_awgn_3.txt  2.0.3_awgn_4.txt  2.0.3_dnec_1.txt  2.0.3_dnec_10.txt  2.0.3_dnec_2.txt  2.0.3_dnpb_1.txt  2.0.3_dnpb_10.txt  2.0.3_dnpb_2.txt  2.0.3_dnpb_3.txt  2.0.3_dnpb_4.txt  (+8 more)
result/2.1/: 2.1.0_awgn_1.txt  2.1.0_awgn_2.txt
result/3.0/: 3.0.0_awgn.txt  3.0.1_awgn_1.txt  3.0.1_awgn_2.txt  3.0.2_awgn_1.txt  3.0.2_awgn_2.txt  3.0.2_awgn_3.txt  3.0.2_awgn_4.txt  3.0.2_awgn_5.txt  3.0.2_awgn_6.txt
result/3.1/: 3.1.0_mids_1.txt  3.1.0_mids_2.txt  3.1.0_mids_3.txt  3.1.0_mids_4.txt
result/3.2/: 3.2.1_awgn_1.txt  3.2.1_awgn_2.txt  3.2.1_awgn_3.txt  3.2.1_awgn_4.txt  3.2.1_awgn_5.txt  3.2.1_awgn_6.txt  3.2.1_awgn_7.txt
result/3.3/: 3.3.0_awgn_1.txt  3.3.1_awgn_1.txt  3.3.1_awgn_2.txt  3.3.1_awgn_3.txt  3.3.1_awgn_4.txt  3.3.1_awgn_5.txt  3.3.1_awgn_6.txt
result/3.4/: 3.4.0_awgn_1.txt  3.4.0_awgn_2.txt  3.4.1_awgn_1.txt  3.4.1_awgn_2.txt  3.4.1_awgn_3.txt  3.4.1_awgn_4.txt  3.4.1_awgn_5.txt  3.4.1_awgn_6.txt  3.4.2_awgn_1.txt  3.4.2_awgn_2.txt  3.4.2_awgn_3.txt  3.4.2_awgn_4.txt  3.4.2_awgn_5.txt
result/3.5/: 3.5.0_awgn_1.txt  3.5.0_awgn_2.txt  3.5.0_awgn_3.txt  3.5.1_awgn_1.txt  3.5.1_awgn_2.txt  3.5.1_awgn_3.txt  3.5.2_awgn_1.txt  3.5.2_awgn_2.txt
result/3.6/: 3.6.0_awgn_1.txt  3.6.0_awgn_2.txt  3.6.0_awgn_3.txt  3.6.1_awgn_1.txt  3.6.2_awgn_1.txt  3.6.3_awgn_1.txt  3.6.4_awgn_1.txt  3.6.4_awgn_2.txt
result/3.7/: 3.7.0_mids_1.txt  3.7.0_mids_2.txt  3.7.1_mids_1.txt  3.7.2_awgn_1.txt  3.7.2_awgn_2.txt  3.7.2_awgn_3.txt  3.7.2_lids_1.txt  3.7.2_mids_1.txt  3.7.2_mids_2.txt  3.7.3_awgn_1.txt  3.7.3_awgn_10.txt  3.7.3_awgn_2.txt  3.7.3_awgn_3.txt  3.7.3_awgn_4.txt  3.7.3_awgn_5.txt  3.7.3_awgn_6.txt  3.7.3_awgn_7.txt  3.7.3_awgn_8.txt  3.7.3_awgn_9.txt
result/3.9/: 3.9.0_awgn_1.txt  3.9.0_awgn_2.txt  3.9.0_awgn_3.txt  3.9.2_awgn_1.txt  3.9.2_awgn_2.txt  3.9.2_awgn_3.txt  3.9.3_awgn_1.txt  3.9.3_awgn_2.txt
result/ipynb/: LDPCAWGN_SingleCPU1.html  LDPCAWGN_SingleCPU2.html  LDPCAWGN_Singlethread_a.html  LDPCAWGN_Singlethread_b.html
result/old/: result.txt  result2.txt  result3.txt  result4.txt  resultDf.txt  resultDi.txt  resultDp.txt  resultF.txt  resultF2.txt  resultFf.txt
src/: auxiliary.cpp  changelog.txt  mainawgn.cpp  mainawgn.cu  maindddb.cpp  mainddnb.cpp  maindnec.cpp  maindnfb.cpp  maindnpb.cpp  maindpb1.cpp  maindpb2.cpp  maindpb4.cpp  maindpbe.cpp  maindpbn.cpp  maindvdb.cpp  maindvfb.cpp  maindvnb.cpp  mainlids.cpp  mainmids.cpp
src/common/: CMakeLists.txt  codecommon.cuh  codecommon.hpp  fileaccess.cpp  fileaccess.hpp  memory.cuh  randombits.hpp  timekeep.hpp  util.cuh  util.hpp
src/dnas/: CMakeLists.txt  DNASmytype.hpp  DNASnttype.hpp  channelsequencer.hpp  codeDNAS.cpp  codeDNAS.hpp  codeDNASRLL.hpp  codeDNASadapter.hpp  codeDNASbalancing.hpp  codeDNASstats.hpp  sequencer.cpp  sequencer.hpp
src/idec/: CMakeLists.txt  IDECbase.cpp  IDECbase.hpp  IDS.cpp  IDS.hpp  codeIDEC.cpp  codeIDEC.hpp
src/ldpc/: AWGN.hpp  CMakeLists.txt  LDPCCheckMatrix.cuh  LDPCCheckMatrix.hpp  LDPCGenerationMatrixencoding.hpp  LDPCbase.cpp  LDPCbase.hpp  LDPCboxplus.cuh  LDPCboxplus.hpp  LDPCdecoding.cuh  LDPCdecoding.hpp  LDPCencoding.cuh  LDPCencoding.hpp  LDPCfuncGallager.hpp  channelAWGN.hpp  checkmatrix.cpp  checkmatrix.hpp  codeLDPC.hpp  codeSystematicLDPC.cuh  codeSystematicLDPC.hpp
src/ldpcidec/: CMakeLists.txt  codeLDPCIDEC.cpp  codeLDPCIDEC.hpp
(+190 files in other folders)
